--- a/client/client.html
+++ b/client/client.html
@@ -6,26 +6,148 @@
   
   <script>
 
+  const handleResponse = async (response,method) => {
+      
+      const content = document.querySelector('#content');
+
+      //uses the response from server and parses it to display it on the browser
+      switch(response.status) {
+        case 200: 
+          content.innerHTML = `<b>Success</b>`;
+          break;
+        case 201:
+          content.innerHTML = `<b>Created</b>`;
+          break;
+        case 204:
+          content.innerHTML = `<b>Updated (No content)</b>`;
+          break;
+        case 400: 
+          content.innerHTML = `<b>Bad Request</b>`;
+          break;
+        case 404:
+          content.innerHTML = `<b>Not Found</b>`;
+          break;
+        default: 
+          content.innerHTML = `Error code not implemented by client.`;
+          break;
+      }
+    // let obj = await response.json();
+
+    // if(obj.message){
+    //   content.innerHTML += `<p>${obj.message}</p>`;
+    // }
+
+    //if the response is not 204 (204 means no response body)
+    //and if there is a POST or GET request (not head)
+    //then print out the object if it exists otherwise print out the JSON content (for success or creation)
+    if(method && response.status !== 204) {
+      //this gets the response from the server and we turn the string from
+      //the server back into an object so we can use it 
+      let obj = await response.json();
+      let jsonString = JSON.stringify(obj);
+      //responseJSON is the message that goes back to the user
+      if(obj.message){
+        content.innerHTML += `<p>Message: ${obj.message}</p>`;
+        console.log(obj.message);
+      }
+      else{
+        //or obj to get the actual object and not the string
+        //if there is no body or if uit was a head request 
+        content.innerHTML += `<p>${jsonString}</p>`;
+        console.log(obj);
+      }
+    } 
+
+  };
+
+  const sendPost = async (nameForm) => {
+
+    const nameAction = nameForm.getAttribute('action');
+    const nameMethod = nameForm.getAttribute('method');
+
+    const nameField = nameForm.querySelector('#nameField');
+    const ageField = nameForm.querySelector('#ageField');
+
+    const formData = `name=${nameField.value}&age=${ageField.value}`;
+    //takes response from server then gives it to handle response 
+    let response = await fetch(nameAction, {
+      method: nameMethod,
+      headers: {
+        'Content-Type': 'application/x-www-form-urlencoded',
+        'Content-Length': formData.length,
+        'Accept': 'application/json',
+      },
+      body: formData,
+
+    });
+    handleResponse(response, nameMethod !== 'HEAD');
+
+  };
+
+
+  const requestUpdate = async (userForm) => {
+
+    const url = userForm.querySelector('#urlField').value;
+    const method = userForm.querySelector('#methodSelect').value;
+
+    //grab whatever is in the dropdown and send it as the url for fetch
+    //for the url we have to go to
+    //fetch is from client to server (wait for server to respond)
+    //every request goes to onreqesut when we call fetch then goes from there
+    let response = await fetch(url, {
+      headers: {
+          'Accept': 'application/json'
+      },
+    });
+
+    
+    handleResponse(response, method !== 'HEAD');
+
+  };
+
+  const init = () => {
+    const userForm = document.querySelector('#userForm');
+    const nameForm = document.querySelector('#nameForm');
+
+    const getUsers = (e) => {
+      e.preventDefault();
+      requestUpdate(userForm);
+      return false;
+    }
+
+    const addUser = (e) => {
+      e.preventDefault();
+      sendPost(nameForm);
+      return false;
+    }
+
+    userForm.addEventListener('submit', getUsers);
+    nameForm.addEventListener('submit', addUser);
+
+  };
+
+  window.onload = init;
+
   </script>
 </head>
 <body>
   <section id="top">
     <h3>POST Status Code Tests</h3>
-    <form id="nameForm" action="/addUser" method="post">
+    <form id="nameForm" action="/addUser" method="POST">
       <label for="name">Name: </label>
       <input id="nameField" type="text" name="name" />
       <label for="age">Age: </label>
       <input id="ageField" type="number" name="age" min="0" max="100" step="1"/>
       <input type="submit" value="Add User" />
     </form>
-    <form id="userForm" action="/getUsers" method="get">
+    <form id="userForm" action="/getUsers" method="GET">
       <select id='urlField'>
         <option value='/getUsers'>/getUsers</option>
         <option value='/notReal'>/notReal</option>
       </select>
       <select id="methodSelect">
-        <option value="get">GET</option>
-        <option value="head">HEAD</option>
+        <option value="GET">GET</option>
+        <option value="HEAD">HEAD</option>
       </select>
       <input type="submit" value="Get User" />
     </form>
